courses/430_programming-languages/assignment-6/tests/error/hw5_error07.nex
fun f() : none
{
}
print "should not get here:n";
1 / 0;
   print (1 + f());
   print (":n");
